Huge save : refactoring the LaTeX code and adding the German and Spanish versions of the "Color code.tex" file

--- a/docs/fr/Code couleur.tex
+++ b/docs/fr/Code couleur.tex
@@ -5,7 +5,7 @@
 \usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
 \usepackage[T1]{fontenc}		% Règle de césure pour les caractères accentués (pour le compilateur LaTeX).
 
-\usepackage{fancyhdr}           % Ajout de headers et footers à chaque page du document.
+\usepackage{fancyhdr}           % Ajout d'en-têtes et de pieds de page à chaque page du document.
 \usepackage{hyperref}           % Création de liens cliquables pointant vers d'autres parties du document.
 \usepackage{parskip}            % Sauts de ligne déterminables entre chaque paragraphe.
 
@@ -78,100 +78,98 @@
 % Début du document.
 
 \begin{document}
-\maketitle
-\newpage
+    \maketitle
+    \newpage
 
-\color{sec1}
-\section{Couleurs de la documentation au format "normal"}\color{text}
+    \color{sec1}
+    \section{Couleurs de la documentation au format "normal"}\color{text}
 
-\begin{justify}
-  \textbf{\color{case}ATTENTION :} Il n'est pas conseillé d'imprimer un document dans ce format, pour le toner de votre imprimante et pour une meilleure qualité d'impression avec le modèle de couleur CJMB (CYMK) proposé par le format imprimable.
+    \begin{justify}
+        \textbf{\color{case}ATTENTION :} Il n'est pas conseillé d'imprimer un document dans ce format, pour le toner de votre imprimante et pour une meilleure qualité d'impression avec le modèle de couleur CJMB (CYMK) proposé par le format imprimable.
 
-  Pour passer au format imprimable, exécutez le script \textbf{\color{cmds}latex-convert-to-printable.sh}. Il se situe dans le dossier des fichiers exécutables, mais son code n'a pas encore été écrit.
-\end{justify}
+        Pour passer au format imprimable, exécutez le script \textbf{\color{cmds}latex-convert-to-printable.sh}. Il se situe dans le dossier des fichiers exécutables, mais son code n'a pas encore été écrit.
+    \end{justify}
 
-\color{text}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+    \color{text}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
-\begin{justify}
-  \textbf{NOTE :} À chaque fois que vous appelez la commande \textbf{\textbackslash{color}} incluse dans le paquet \textbf{xcolor}, veuillez appeler la commande native de \LaTeX \ \textbf{\textbackslash{textbf}} pour mettre en gras la chaîne de caractères colorée, pour mieux la mettre en évidence.
-\end{justify}
+    \begin{justify}
+        \textbf{NOTE :} À chaque fois que vous appelez la commande \textbf{\textbackslash{color}} incluse dans le paquet \textbf{xcolor}, veuillez appeler la commande native de \LaTeX \ \textbf{\textbackslash{textbf}} pour mettre en gras la chaîne de caractères colorée, pour mieux la mettre en évidence.
+    \end{justify}
 
-\begin{justify}
-  Pour ce faire, veuillez procédez de la manière suivante :
+    \begin{justify}
+        Pour ce faire, veuillez procédez de la manière suivante :
 
-  \begin{itemize}
-    \item \textbackslash{textbf\{\textbackslash{color\{nom\_du\_code\_couleur\_défini}\}}\}
-  \end{itemize}
-\end{justify}
+        \begin{itemize}
+              \item \textbackslash{textbf\{\textbackslash{color\{nom\_du\_code\_couleur\_défini}\}}\}
+          \end{itemize}
+      \end{justify}
 
-\color{text}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+    \color{text}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
-\begin{justify}
-  La liste des codes de couleurs pour la version imprimable se situe en dessous de la liste suivante, à la page suivante.
-\end{justify}
+  \begin{justify}
+    La liste des codes de couleurs pour la version imprimable se situe en dessous de la liste suivante, à la page suivante.
+  \end{justify}
 
-\begin{justify}
-    \begin{tabular}{lll}
-        \textbf{Code couleur} & \textbf{Couleur}    & \textbf{Description}\\\\
+  \begin{justify}
+      \begin{tabular}{lll}
+          \textbf{Code couleur} & \textbf{Couleur}    & \textbf{Description}\\\\
 
-        \color{text}back  & \color{text}Noir        & \color{text}Couleur de fond du document\\
-        \color{case}case  & \color{case}Jaune       & \color{case}Couleur des conditions \textbf{"case"}\\
-        \color{cmds}cmds  & \color{cmds}Gris        & \color{cmds}Couleur des noms de commandes du système et de leurs arguments\\\\
+          \color{text}back  & \color{text}Noir        & \color{text}Couleur de fond du document\\
+          \color{case}case  & \color{case}Jaune       & \color{case}Couleur des conditions \textbf{"case"}\\
+          \color{cmds}cmds  & \color{cmds}Gris        & \color{cmds}Couleur des noms de commandes du système et de leurs arguments\\\\
 
-        \color{cond}cond  & \color{cond}Brique      & \color{cond}Couleur des conditions \textbf{"if"}\\
-        \color{func}func  & \color{func}Mauve       & \color{func}Couleur des fonctions définies dans chaque module du framework\\
-        \color{loop}loop  & \color{loop}Cyan        & \color{loop}Couleur des boucles\\\\
+          \color{cond}cond  & \color{cond}Brique      & \color{cond}Couleur des conditions \textbf{"if"}\\
+          \color{func}func  & \color{func}Mauve       & \color{func}Couleur des fonctions définies dans chaque module du framework\\
+          \color{loop}loop  & \color{loop}Cyan        & \color{loop}Couleur des boucles\\\\
 
-        \color{main}main  & \color{main}Violet      & \color{main}Couleur des fonctions du script principal\\
-        \color{path}path  & \color{path}Citron vert & \color{path}Couleur des chemins de dossiers et de fichiers\\
-        \color{sec1}sec1  & \color{sec1}Rouge       & \color{sec1}Couleur des titres principaux et de premier niveau\\\\
+          \color{main}main  & \color{main}Violet      & \color{main}Couleur des fonctions du script principal\\
+          \color{path}path  & \color{path}Citron vert & \color{path}Couleur des chemins de dossiers et de fichiers\\
+          \color{sec1}sec1  & \color{sec1}Rouge       & \color{sec1}Couleur des titres principaux et de premier niveau\\\\
 
-        \color{sec2}sec2  & \color{sec2}Vert        & \color{sec2}Couleur des titres de deuxième niveau\\
-        \color{sec3}sec3  & \color{sec3}Bleu        & \color{sec3}Couleur des titres de troisième niveau\\
-        \color{text}text  & \color{text}Blanc       & \color{text}Couleur du texte normal\\\\
+          \color{sec2}sec2  & \color{sec2}Vert        & \color{sec2}Couleur des titres de deuxième niveau\\
+          \color{sec3}sec3  & \color{sec3}Bleu        & \color{sec3}Couleur des titres de troisième niveau\\
+          \color{text}text  & \color{text}Blanc       & \color{text}Couleur du texte normal\\\\
 
-        \color{vars}vars  & \color{vars}Orange      & \color{vars}Couleur des noms des paramètres et des variables\\
-    \end{tabular}
-\end{justify}
+          \color{vars}vars  & \color{vars}Orange      & \color{vars}Couleur des noms des paramètres et des variables\\
+      \end{tabular}
+  \end{justify}
 
-\newpage
+  \newpage
 
-% ------------
+  % ------------
 
-% ----------------------
+  % ----------------------
 
-% -----------------------------------------------
+  % -----------------------------------------------
 
-% /////////////////////////////////////////////////////////////////////////////////////////////// %
+  % /////////////////////////////////////////////////////////////////////////////////////////////// %
 
-\color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+  \color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
-\color{red}
-\section{Couleurs de la documentation au format imprimable}\color{text}
+  \color{red}
+  \section{Couleurs de la documentation au format imprimable}\color{text}
 
-\begin{justify}
-    \begin{tabular}{lll}
-        \textbf{Code couleur} & \textbf{Couleur}    & \textbf{Description}\\\\
+  \begin{justify}
+      \begin{tabular}{lll}
+          \textbf{Code couleur} & \textbf{Couleur}    & \textbf{Description}\\\\
 
-        \color{text}back  & \color{text}Blanc       & \color{text}Couleur de fond du document\\
-        \color{case}case  & \color{case}Jaune       & \color{case}Couleur des conditions \textbf{"case"}\\
-        \color{cmds}cmds  & \color{cmds}Gris        & \color{cmds}Couleur des noms de commandes du système et de leurs arguments\\\\
+          \color{text}back  & \color{text}Blanc       & \color{text}Couleur de fond du document\\
+          \color{case}case  & \color{case}Jaune       & \color{case}Couleur des conditions \textbf{"case"}\\
+          \color{cmds}cmds  & \color{cmds}Gris        & \color{cmds}Couleur des noms de commandes du système et de leurs arguments\\\\
 
-        \color{cond}cond  & \color{cond}Brique      & \color{cond}Couleur des conditions \textbf{"if"}\\
-        \color{func}func  & \color{func}Mauve       & \color{func}Couleur des fonctions définies dans chaque module du framework\\
-        \color{loop}loop  & \color{loop}Cyan        & \color{loop}Couleur des boucles\\\\
+          \color{cond}cond  & \color{cond}Brique      & \color{cond}Couleur des conditions \textbf{"if"}\\
+          \color{func}func  & \color{func}Mauve       & \color{func}Couleur des fonctions définies dans chaque module du framework\\
+          \color{loop}loop  & \color{loop}Cyan        & \color{loop}Couleur des boucles\\\\
 
-        \color{main}main  & \color{main}Violet      & \color{main}Couleur des fonctions du script principal\\
-        \color{path}path  & \color{path}Citron vert & \color{path}Couleur des chemins de dossiers et de fichiers\\
-        \color{sec1}sec1  & \color{sec1}Rouge       & \color{sec1}Couleur des titres principaux et de premier niveau\\\\
+          \color{main}main  & \color{main}Violet      & \color{main}Couleur des fonctions du script principal\\
+          \color{path}path  & \color{path}Citron vert & \color{path}Couleur des chemins de dossiers et de fichiers\\
+          \color{sec1}sec1  & \color{sec1}Rouge       & \color{sec1}Couleur des titres principaux et de premier niveau\\\\
 
-        \color{sec2}sec2  & \color{sec2}Vert        & \color{sec2}Couleur des titres de deuxième niveau\\
-        \color{sec3}sec3  & \color{sec3}Bleu        & \color{sec3}Couleur des titres de troisième niveau\\
-        \color{text}text  & \color{text}Noir        & \color{text}Couleur du texte normal\\\\
+          \color{sec2}sec2  & \color{sec2}Vert        & \color{sec2}Couleur des titres de deuxième niveau\\
+          \color{sec3}sec3  & \color{sec3}Bleu        & \color{sec3}Couleur des titres de troisième niveau\\
+          \color{text}text  & \color{text}Noir        & \color{text}Couleur du texte normal\\\\
 
-        \color{vars}vars  & \color{vars}Orange      & \color{vars}Couleur des noms des paramètres et des variables\\
-    \end{tabular}
-\end{justify}
-
-
+          \color{vars}vars  & \color{vars}Orange      & \color{vars}Couleur des noms des paramètres et des variables\\
+      \end{tabular}
+  \end{justify}
 \end{document}
