--- a/docs/fr/modules/02) Config/main/Text-conf.tex
+++ b/docs/fr/modules/02) Config/main/Text-conf.tex
@@ -5,7 +5,7 @@
 \usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
 \usepackage[T1]{fontenc}		% Règle de césure pour les caractères accentués (pour le compilateur LaTeX).
 
-\usepackage{fancyhdr}           % Ajout de headers et footers à chaque page du document.
+\usepackage{fancyhdr}           % Ajout d'en-têtes et de pieds de page à chaque page du document.
 \usepackage{hyperref}           % Création de liens cliquables pointant vers d'autres parties du document.
 \usepackage{parskip}            % Sauts de ligne déterminables entre chaque paragraphe.
 
@@ -79,106 +79,105 @@
 % Début du document.
 
 \begin{document}
-\maketitle
-\newpage
+    \maketitle
+    \newpage
 
-\hypertarget{contents}{}
-\tableofcontents
-\newpage
+    \hypertarget{contents}{}
+    \tableofcontents
+    \newpage
 
-\color{sec1}
-\section{Présentation}\color{text}
+    \color{sec1}
+    \section{Présentation}\color{text}
 
-\color{sec2}
-\subsection{Description}\color{text}
+    \color{sec2}
+    \subsection{Description}\color{text}
 
-\begin{justify}
-    Ce fichier de configurations liste chaque variable globale de texte utilisée par la librairie, avec sa ou ses valeurs par défaut.
-\end{justify}
+    \begin{justify}
+        Ce fichier de configurations liste chaque variable globale de texte utilisée par la librairie, avec sa ou ses valeurs par défaut.
+    \end{justify}
 
-\begin{justify}
-    Elles sont chargées en mémoire lors de l'inclusion du fichier \textbf{\color{path}Initialization.sh} appartenant au module principal.
-\end{justify}
+    \begin{justify}
+        Elles sont chargées en mémoire lors de l'inclusion du fichier \textbf{\color{path}Initialization.sh} appartenant au module principal.
+    \end{justify}
 
-% ------------
+    % ------------
 
-% ----------------------
+    % ----------------------
 
-\color{sec2}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+    \color{sec2}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
-\color{sec2}
-\subsection{Définition des éléments mentionnés}\color{text}
+    \color{sec2}
+    \subsection{Définition des éléments mentionnés}\color{text}
 
-\color{sec3}
-\subsubsection{Chemins des fichiers}\color{text}
+    \color{sec3}
+    \subsubsection{Chemins des fichiers}\color{text}
 
-\begin{justify}
-    \begin{tabular}{|l|l|}
-        \hline
-        \textbf{Dossier parent} - \textit{gestionnaire de modules} & \textbf{Nom du fichier}\\
-        \hline
-        \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT} & \textbf{\color{path}Status.conf}\\
-        \hline
-    \end{tabular}
-\end{justify}
+    \begin{justify}
+        \begin{tabular}{|l|l|}
+            \hline
+            \textbf{Dossier parent} - \textit{gestionnaire de modules} & \textbf{Nom du fichier}\\
+            \hline
+            \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT} & \textbf{\color{path}Status.conf}\\
+            \hline
+        \end{tabular}
+    \end{justify}
 
-\setlength{\parskip}{2em}
+    \setlength{\parskip}{2em}
 
-% ------------
+    % ------------
 
-% ----------------------
+    % ----------------------
 
-\color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
+    \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
 
-\color{sec3}
-\subsubsection{Fonctions externes appelées}\color{text}
+    \color{sec3}
+    \subsubsection{Fonctions externes appelées}\color{text}
 
-\begin{justify}
-    \begin{tabular}{|l|l|}
-        \hline
-        \textbf{Fonction} & \textbf{Fichier de définition}\\
-        \hline
-        \textbf{\color{func}BU.ModuleInit.DisplayInitGlobalVarsInfos} & \textbf{\color{path}Bash-utils-init.sh}\\
-        \hline
-        \textbf{\color{func}BU.ModuleInit.Msg}                        & \textbf{\color{path}Bash-utils-init.sh}\\
-        \hline
-    \end{tabular}
-\end{justify}
+    \begin{justify}
+        \begin{tabular}{|l|l|}
+            \hline
+            \textbf{Fonction} & \textbf{Fichier de définition}\\
+            \hline
+            \textbf{\color{func}BU.ModuleInit.DisplayInitGlobalVarsInfos} & \textbf{\color{path}Bash-utils-init.sh}\\
+            \hline
+            \textbf{\color{func}BU.ModuleInit.Msg}                        & \textbf{\color{path}Bash-utils-init.sh}\\
+            \hline
+        \end{tabular}
+    \end{justify}
 
-\setlength{\parskip}{2em}
+    \setlength{\parskip}{2em}
 
-% ------------
+    % ------------
 
-% ----------------------
+    % ----------------------
 
-\color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
+    \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
 
-\color{sec3}
-\subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{text}
+    \color{sec3}
+    \subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{text}
 
-\begin{justify}
-    \begin{tabular}{|l|l|}
-        \hline
-        \textbf{Variable globale} & \textbf{Fichier de définition}\\
-        \hline
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_TXT\_FMT} & \textbf{\color{path}Statut.lib}\\
-        \hline
-    \end{tabular}
-\end{justify}
+    \begin{justify}
+        \begin{tabular}{|l|l|}
+            \hline
+            \textbf{Variable globale} & \textbf{Fichier de définition}\\
+            \hline
+            \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_TXT\_FMT} & \textbf{\color{path}Statut.lib}\\
+            \hline
+        \end{tabular}
+    \end{justify}
 
-\setlength{\parskip}{2em}
+    \setlength{\parskip}{2em}
 
-% ------------
+    % ------------
 
-% ----------------------
+    % ----------------------
 
-% -----------------------------------------------
+    % -----------------------------------------------
 
-% /////////////////////////////////////////////////////////////////////////////////////////////// %
+    % /////////////////////////////////////////////////////////////////////////////////////////////// %
 
-\color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+    \color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
-\color{sec1}
-\section{Liste des fonctions}\color{text}
-
+    \color{sec1}
+    \section{Liste des fonctions}\color{text}
 \end{document}
