--- a/docs/fr/modules/04) Functions/main/TextFormat.tex
+++ b/docs/fr/modules/04) Functions/main/TextFormat.tex
@@ -5,7 +5,7 @@
 \usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
 \usepackage[T1]{fontenc}		% Règle de césure pour les caractères accentués (pour le compilateur LaTeX).
 
-\usepackage{fancyhdr}           % Ajout de headers et footers à chaque page du document.
+\usepackage{fancyhdr}           % Ajout d'en-têtes et de pieds de page à chaque page du document.
 \usepackage{hyperref}           % Création de liens cliquables pointant vers d'autres parties du document.
 \usepackage{parskip}            % Sauts de ligne déterminables entre chaque paragraphe.
 
@@ -79,28 +79,26 @@
 % Début du document.
 
 \begin{document}
-\maketitle
-\newpage
+    \maketitle
+    \newpage
 
-\hypertarget{contents}{}
-\tableofcontents
-\newpage
+    \hypertarget{contents}{}
+    \tableofcontents
+    \newpage
 
-\color{sec1}
-\section{Présentation}\color{text}
+    \color{sec1}
+    \section{Présentation}\color{text}
 
-\color{sec2}
-\subsection{Description}\color{text}
+    \color{sec2}
+    \subsection{Description}\color{text}
 
-\begin{justify}
-    Ce fichier source inclut des fonctions servant à la coloration du texte, du fond de l'espace occupé par un caractère, et à la mise en forme du texte dans différents formats :
-    \begin{itemize}
-      \item \textbf{gras},\mbox{}
-      \item \textit{italique},\\\mbox{}
-    \end{itemize}
+    \begin{justify}
+        Ce fichier source inclut des fonctions servant à la coloration du texte, du fond de l'espace occupé par un caractère, et à la mise en forme du texte dans différents formats :
+        \begin{itemize}
+            \item \textbf{gras},\mbox{}
+            \item \textit{italique},\\\mbox{}
+        \end{itemize}
 
-    et bien plus.
-\end{justify}
-
-
+        et bien plus.
+    \end{justify}
 \end{document}
