--- a/docs/fr/modules/02) Config/main/Time-conf.tex
+++ b/docs/fr/modules/02) Config/main/Time-conf.tex
@@ -5,7 +5,7 @@
 \usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
 \usepackage[T1]{fontenc}		% Règle de césure pour les caractères accentués (pour le compilateur LaTeX).
 
-\usepackage{fancyhdr}           % Ajout de headers et footers à chaque page du document.
+\usepackage{fancyhdr}           % Ajout d'en-têtes et de pieds de page à chaque page du document.
 \usepackage{hyperref}           % Création de liens cliquables pointant vers d'autres parties du document.
 \usepackage{parskip}            % Sauts de ligne déterminables entre chaque paragraphe.
 
@@ -24,21 +24,21 @@
 
 % Définition de la couleur       % Normal | Imprimable   - Description
 
-\definecolor{back}{HTML}{000000} % Blanc  - Couleur de fond du document.
-\definecolor{case}{HTML}{fcff00} %        - Couleur des conditions "case".
-\definecolor{cmds}{HTML}{909090} %        - Couleur des noms de commandes du système et de leurs arguments.
-\definecolor{cond}{HTML}{be480a} %        - Couleur des conditions "if".
-\definecolor{func}{HTML}{800080} %        - Couleur des fonctions définies dans chaque module du framework Bash Utils.
+\definecolor{back}{HTML}{000000} % Noir | Blanc  - Couleur de fond du document.
+\definecolor{case}{HTML}{fcff00} % Jaune         - Couleur des conditions "case".
+\definecolor{cmds}{HTML}{909090} % Gris          - Couleur des noms de commandes du système et de leurs arguments.
+\definecolor{cond}{HTML}{be480a} % Brique        - Couleur des conditions "if".
+\definecolor{func}{HTML}{800080} % Mauve         - Couleur des fonctions définies dans chaque module du framework Bash Utils.
 
-\definecolor{loop}{HTML}{00ffff} %        - Couleur des boucles.
-\definecolor{main}{HTML}{8F00FF} %        - Couleur des fonctions du script principal.
-\definecolor{path}{HTML}{bfff00} % vert   - Couleur des chemins de dossiers et de fichiers.
-\definecolor{sec1}{HTML}{ff0000} %        - Couleur des titres principaux et de premier niveau.
-\definecolor{sec2}{HTML}{00ff00} %        - Couleur des titres de deuxième niveau.
+\definecolor{loop}{HTML}{00ffff} % Cyan          - Couleur des boucles.
+\definecolor{main}{HTML}{8F00FF} % Violet        - Couleur des fonctions du script principal.
+\definecolor{path}{HTML}{bfff00} % Citron vert   - Couleur des chemins de dossiers et de fichiers.
+\definecolor{sec1}{HTML}{ff0000} % Rouge         - Couleur des titres principaux et de premier niveau.
+\definecolor{sec2}{HTML}{00ff00} % Vert          - Couleur des titres de deuxième niveau.
 
-\definecolor{sec3}{HTML}{0060ff} %        - Couleur des titres de troisième niveau.
-\definecolor{text}{HTML}{ffffff} %| Noir  - Couleur du texte normal.
-\definecolor{vars}{HTML}{FF7F00} %        - Couleur des noms des paramètres et des variables.
+\definecolor{sec3}{HTML}{0060ff} % Bleu          - Couleur des titres de troisième niveau.
+\definecolor{text}{HTML}{ffffff} % Blanc | Noir  - Couleur du texte normal.
+\definecolor{vars}{HTML}{FF7F00} % Orange        - Couleur des noms des paramètres et des variables.
 
 
 % ------------------------------------------------------------------------
@@ -79,17 +79,16 @@
 % Début du document.
 
 \begin{document}
-\maketitle
-\newpage
+    \maketitle
+    \newpage
 
-\hypertarget{contents}{}
-\tableofcontents
-\newpage
+    \hypertarget{contents}{}
+    \tableofcontents
+    \newpage
 
-\color{sec1}
-\section{Présentation}\color{text}
+    \color{sec1}
+    \section{Présentation}\color{text}
 
-\color{sec2}
-\subsection{Description}\color{text}
-
+    \color{sec2}
+    \subsection{Description}\color{text}
 \end{document}
