--- a/docs/fr/modules/04) Functions/main/DevTools.tex
+++ b/docs/fr/modules/04) Functions/main/DevTools.tex
@@ -5,7 +5,7 @@
 \usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
 \usepackage[T1]{fontenc}		% Règle de césure pour les caractères accentués (pour le compilateur LaTeX).
 
-\usepackage{fancyhdr}           % Ajout de headers et footers à chaque page du document.
+\usepackage{fancyhdr}           % Ajout d'en-têtes et de pieds de page à chaque page du document.
 \usepackage{hyperref}           % Création de liens cliquables pointant vers d'autres parties du document.
 \usepackage{parskip}            % Sauts de ligne déterminables entre chaque paragraphe.
 
@@ -79,99 +79,98 @@
 % Début du document.
 
 \begin{document}
-\maketitle
-\newpage
+    \maketitle
+    \newpage
 
-\hypertarget{contents}{}
-\tableofcontents
-\newpage
+    \hypertarget{contents}{}
+    \tableofcontents
+    \newpage
 
-\color{sec1}
-\section{Présentation}\color{text}
+    \color{sec1}
+    \section{Présentation}\color{text}
 
-\color{sec2}
-\subsection{Description}\color{text}
+    \color{sec2}
+    \subsection{Description}\color{text}
 
-\begin{justify}
-    Ce fichier source inclut des fonctions servant directement à l'exécution des scripts DevTools du framework, comme le compilateur, le générateur de templates pour les fichiers source \LaTeX \ ou pour les scripts DevTools ou de projet.
-\end{justify}
+    \begin{justify}
+        Ce fichier source inclut des fonctions servant directement à l'exécution des scripts DevTools du framework, comme le compilateur, le générateur de templates pour les fichiers source \LaTeX \ ou pour les scripts DevTools ou de projet.
+    \end{justify}
 
-\color{sec2}
-\subsection{Définitions des éléments mentionnés}\color{text}
+    \color{sec2}
+    \subsection{Définitions des éléments mentionnés}\color{text}
 
-\color{sec3}
-\subsubsection{Chemins des fichiers}\color{text}
+    \color{sec3}
+    \subsubsection{Chemins des fichiers}\color{text}
 
-\begin{justify}
-    \begin{tabular}{|l|l|}
-     ×
-    \end{tabular}
+    \begin{justify}
+        \begin{tabular}{|l|l|}
+        ×
+        \end{tabular}
 
-    \begin{tabular}{|l|l|}
-     ×
-    \end{tabular}
+        \begin{tabular}{|l|l|}
+        ×
+        \end{tabular}
 
-    \begin{tabular}{|l|l|}
-     ×
-    \end{tabular}
-\end{justify}
+        \begin{tabular}{|l|l|}
+        ×
+        \end{tabular}
+    \end{justify}
 
-% ------------
+    % ------------
 
-% ----------------------
+    % ----------------------
 
-\color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
+    \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
 
-\color{sec3}
-\subsubsection{Fonctions externes appelées}\color{text}
+    \color{sec3}
+    \subsubsection{Fonctions externes appelées}\color{text}
 
-\begin{justify}
-    \begin{tabular}{|l|l|}
-     ×
-    \end{tabular}
-\end{justify}
+    \begin{justify}
+        \begin{tabular}{|l|l|}
+        ×
+        \end{tabular}
+    \end{justify}
 
-% ------------
+    % ------------
 
-% ----------------------
+    % ----------------------
 
-\color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
+    \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
 
-\color{sec3}
-\subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{text}
+    \color{sec3}
+    \subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{text}
 
-\begin{justify}
-    \begin{tabular}{|l|l|}
-     ×
-    \end{tabular}
-\end{justify}
+    \begin{justify}
+        \begin{tabular}{|l|l|}
+        ×
+        \end{tabular}
+    \end{justify}
 
-% ------------
+    % ------------
 
-\textbf{Variable : \color{vars}\$\_\_BU\_MAIN\_}\\[1\baselineskip]
+    \textbf{Variable : \color{vars}\$\_\_BU\_MAIN\_}\\[1\baselineskip]
 
-\setlength{\parskip}{2em}
+    \setlength{\parskip}{2em}
 
-\begin{justify}
-    \textbf{Description :}
-\end{justify}
+    \begin{justify}
+        \textbf{Description :}
+    \end{justify}
 
-\setlength{\parskip}{1em}
+    \setlength{\parskip}{1em}
 
-\begin{justify}
-    Cette variable globale
-\end{justify}
+    \begin{justify}
+        Cette variable globale
+    \end{justify}
 
-\textbf{Fichier de définition : \color{path}}\\[1\baselineskip]
+    \textbf{Fichier de définition : \color{path}}\\[1\baselineskip]
 
-% ------------
+    % ------------
 
-% ----------------------
+    % ----------------------
 
-% -----------------------------------------------
+    % -----------------------------------------------
 
-% /////////////////////////////////////////////////////////////////////////////////////////////// %
+    % /////////////////////////////////////////////////////////////////////////////////////////////// %
 
-\color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
-
+    \color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 \end{document}
