--- a/docs/fr/modules/04) Functions/main/OS.tex
+++ b/docs/fr/modules/04) Functions/main/OS.tex
@@ -5,7 +5,7 @@
 \usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
 \usepackage[T1]{fontenc}		% Règle de césure pour les caractères accentués (pour le compilateur LaTeX).
 
-\usepackage{fancyhdr}           % Ajout de headers et footers à chaque page du document.
+\usepackage{fancyhdr}           % Ajout d'en-têtes et de pieds de page à chaque page du document.
 \usepackage{hyperref}           % Création de liens cliquables pointant vers d'autres parties du document.
 \usepackage{parskip}            % Sauts de ligne déterminables entre chaque paragraphe.
 
@@ -80,86 +80,85 @@
 % Début du document.
 
 \begin{document}
- \maketitle
- \tableofcontents
- \newpage
+    \maketitle
+    \tableofcontents
+    \newpage
 
-\color{sec1}
-\section{Présentation}\color{text}
+    \color{sec1}
+    \section{Présentation}\color{text}
 
-\color{sec2}
-\subsection{Présentation}\color{text}
-Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\baselineskip]
+    \color{sec2}
+    \subsection{Présentation}\color{text}
+    Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\baselineskip]
 
-% ------------
+    % ------------
 
-% ----------------------
+    % ----------------------
 
-% -----------------------------------------------
+    % -----------------------------------------------
 
-\color{sec2}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+    \color{sec2}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
-\color{sec2}
-\subsection{Définitions des éléments mentionnés}\color{text}
+    \color{sec2}
+    \subsection{Définitions des éléments mentionnés}\color{text}
 
-\color{sec3}
-\subsubsection{Chemins des fichiers}\color{text}
+    \color{sec3}
+    \subsubsection{Chemins des fichiers}\color{text}
 
-\textbf{Dossier parent :} \textbf{\color{path}\color{text}}\\[1\baselineskip]
+    \textbf{Dossier parent :} \textbf{\color{path}\color{text}}\\[1\baselineskip]
 
-% ------------
+    % ------------
 
-% ----------------------
+    % ----------------------
 
-\color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+    \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
-\color{sec3}
-\subsubsection{Fonctions}\color{text}
+    \color{sec3}
+    \subsubsection{Fonctions}\color{text}
 
-\textbf{Fonction :} \textbf{\color{func}\color{text}}\\[1\baselineskip]
+    \textbf{Fonction :} \textbf{\color{func}\color{text}}\\[1\baselineskip]
 
-\textbf{Fichier de définition :} \textbf{\color{path}\color{text}}\\[1\baselineskip]
+    \textbf{Fichier de définition :} \textbf{\color{path}\color{text}}\\[1\baselineskip]
 
-% ------------
+    % ------------
 
-% ----------------------
+    % ----------------------
 
-\color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+    \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
-\color{sec3}
-\subsubsection{Variables}\color{text}
+    \color{sec3}
+    \subsubsection{Variables}\color{text}
 
-\textbf{Variable :} \textbf{\color{vars}\color{text}}\\[1\baselineskip]
+    \textbf{Variable :} \textbf{\color{vars}\color{text}}\\[1\baselineskip]
 
-\textbf{Description :} .\\[1\baselineskip]
+    \textbf{Description :} .\\[1\baselineskip]
 
-\textbf{Fichier de définition :} \textbf{\color{path}\color{text}}\\[1\baselineskip]
-
-
+    \textbf{Fichier de définition :} \textbf{\color{path}\color{text}}\\[1\baselineskip]
 
 
-\color{vars}\par\noindent\rule{\textwidth}{0.4pt}\\[1\baselineskip]\color{text}
 
-\textbf{Variable :} \textbf{\color{vars}\color{text}}\\[1\baselineskip]
 
-\textbf{Description :} .\\[1\baselineskip]
+    \color{vars}\par\noindent\rule{\textwidth}{0.4pt}\\[1\baselineskip]\color{text}
 
-\textbf{Fichier de définition :} \textbf{\color{path}\color{text}}\\[1\baselineskip]
+    \textbf{Variable :} \textbf{\color{vars}\color{text}}\\[1\baselineskip]
 
-% ------------
+    \textbf{Description :} .\\[1\baselineskip]
 
-% ----------------------
+    \textbf{Fichier de définition :} \textbf{\color{path}\color{text}}\\[1\baselineskip]
 
-% -----------------------------------------------
+    % ------------
 
-% /////////////////////////////////////////////////////////////////////////////////////////////// %
+    % ----------------------
 
-\color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+    % -----------------------------------------------
 
-\color{sec1}
-\section{Fonctions}\color{text}
+    % /////////////////////////////////////////////////////////////////////////////////////////////// %
 
-\color{sec2}
-\subsection{}\color{text}
+    \color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
+    \color{sec1}
+    \section{Fonctions}\color{text}
+
+    \color{sec2}
+    \subsection{}\color{text}
 \end{document}
